--- a/src/assets/scss/fonts/_icon.scss
+++ b/src/assets/scss/fonts/_icon.scss
@@ -77,7 +77,15 @@
 .icon-covid:before {
   content: "\6d";
 }
-
+.icon-linkedin:before {
+  content: "\6e";
+}
+.icon-github:before {
+  content: "\6f";
+}
+.icon-facebook:before {
+  content: "\70";
+}
 
 
 
