--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,7 +22,7 @@
   "./component/header", "./component/logo", "./component/sidebar", "./component/card", "./component/chart", "./component/antd_customise", "./component/vaccine-details", "./component/title";
 
 // MODULES
-@import "./modules/content", "./modules/total-count", "./modules/app-data-list", "./modules/vaccine", "./modules/covid-info";
+@import "./modules/content", "./modules/total-count", "./modules/app-data-list", "./modules/vaccine", "./modules/covid-info", "./modules/about";
 
 // PAGES
 @import "./pages/404",  "./pages/app";
