--- a/src/assets/scss/core/_normalize.scss
+++ b/src/assets/scss/core/_normalize.scss
@@ -11,6 +11,7 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  overflow: hidden;
 }
 
 /* Sections
@@ -23,7 +24,7 @@ html {
 body {
   margin: 0;
   font-family: $font-main;
-  overflow-x: hidden;
+  overflow: hidden;
   font-size: 16px;
   background-color: $color_one;
 }
