--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,7 +19,7 @@
 
 // COMPONENTS
 @import "./component/icon", "./component/layout", "./component/input", "./component/button",
-  "./component/header", "./component/logo", "./component/sidebar", "./component/card", "./component/chart", "./component/antd_customise", "./component/vaccine-details", "./component/title";
+  "./component/header", "./component/logo", "./component/sidebar", "./component/card", "./component/chart", "./component/antd_customise", "./component/vaccine-details", "./component/title", "./component/footer";
 
 // MODULES
 @import "./modules/content", "./modules/total-count", "./modules/app-data-list", "./modules/vaccine", "./modules/covid-info", "./modules/about";
