--- a/src/assets/scss/modules/_total-count.scss
+++ b/src/assets/scss/modules/_total-count.scss
@@ -20,9 +20,18 @@
 
 .app-totals{
     margin-bottom: 1rem;
+    @include media-breakpoint-down(sm) {
+        padding-bottom: 0;
+    }
+    .card-title{
+        margin-bottom: 1rem;
+    }
     .app-totals-list{
         padding: 1rem;
         background-color: $color_two;
+        @include media-breakpoint-down(sm) {
+            margin-bottom: 1rem;
+        }
         ul{
             margin: 0;
             padding: 0;
@@ -32,10 +41,26 @@
                 @include font-family($font-main, 1em, $color_four, 300, 2em);
                 span{
                     font-weight: 600;
-                    color:  $color_five;
+                }
+                @include media-breakpoint-down(lg) {
+                    font-size: 0.88em;
+                }
+                @include media-breakpoint-only(md) {
+                    display: block;
+                    span{
+                        display: block;
+                    }
                 }
             }
         }
     }
-
+}
+.app-chart-bar-wrap{
+    .chart-wrap{
+        overflow-x: auto;
+        canvas{
+            width: 100% !important;
+            height: auto !important;
+        }
+    }
 }
