--- a/src/assets/scss/component/_logo.scss
+++ b/src/assets/scss/component/_logo.scss
@@ -3,9 +3,18 @@
     text-decoration: none;
     text-transform: uppercase;
     @include flex(center, normal);
-    @include font-family($font-main, 1.15em, white, 600, 1.2em);
+    @include font-family($font-main, 1em, white, 600, 1.2em);
+    @include media-breakpoint-down(md) {
+        font-size: 0.8em;
+    }
     img{
-        max-width: 60px;
+        max-width: 55px;
+        @include media-breakpoint-down(md) {
+            max-width: 50px;
+        }
+        @include media-breakpoint-down(sm) {
+            max-width: 35px;
+        }
     }
     span{
         margin-left: 0.5rem;
