--- a/src/assets/scss/component/_sidebar.scss
+++ b/src/assets/scss/component/_sidebar.scss
@@ -1,4 +1,5 @@
 .app-sidebar{
+    flex: none;
     width: 250px;
     height: 100%;
     position: relative;
@@ -6,8 +7,21 @@
     background-color: $color_two;
     @include flex(center, space-between);
     padding: var(--padding) calc(2 * var(--padding));
+    @include media-breakpoint-down(md) {
+        width: 175px;
+        padding: 1rem;
+    }
+    @include media-breakpoint-down(sm) {
+        height: auto;
+        width: 100%;
+        flex-direction: row;
+        padding: 0.5rem 1rem;
+    }
     .nav{
         margin-top: calc(3* var(--margin));
+        @include media-breakpoint-down(sm) {
+            display: none;
+        }
         .nav-link{
             transition: all ease .4s;
             margin-bottom: var(--margin);
@@ -15,6 +29,10 @@
             border-radius: calc(3* var(--border-radius));
             padding: 0.8rem calc(1.5 * var(--padding));
             @include font-family($font-main, 1em, $color_five, 500, 1);
+            @include media-breakpoint-down(md) {
+                font-size: 0.8em;
+                padding: 0.5rem;
+            }
             .icon{
                 margin-right: 0.8rem;
             }
@@ -48,16 +66,33 @@
         @include flex(center, normal);
         letter-spacing: 0.04em;
         border-radius: 6px;
+        overflow: hidden;
         padding: 0.6rem;
         width: 100%;
         box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.53)!important;
         -webkit-box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.53)!important;
         -moz-box-shadow: 3px 3px 3px 2px rgba(0,0,0,0.53)!important;
+        @include media-breakpoint-down(md) {
+            font-size: 0.8em;
+        }
+        @include media-breakpoint-down(sm) {
+            width: 35px;
+            padding: 0.1rem;
+            text-indent: 9999px;
+        }
         img{
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             margin-right: 1rem;
             border-radius: 6px;
+            @include media-breakpoint-down(md) {
+                margin-right: 0.5rem;
+            }
+            @include media-breakpoint-down(sm) {
+                width: 30px;
+                height: 30px;
+                margin: 0;
+            }
         }
         &:hover{
             background-color: rgba($color_five, 0.3);
