--- a/src/assets/scss/pages/_app.scss
+++ b/src/assets/scss/pages/_app.scss
@@ -1,5 +1,7 @@
 .App{
-    height: 100vh;
-    overflow: hidden;
-    @include flex(normal, normal);
+    @include media-breakpoint-up(sm) {
+        height: 100vh;
+        overflow: hidden;
+        @include flex(normal, normal);
+    }
 }
