--- a/src/assets/scss/modules/_vaccine.scss
+++ b/src/assets/scss/modules/_vaccine.scss
@@ -4,12 +4,25 @@
         @include flex(center, space-between);
         .app-title{
             margin: 0;
-            @include flex(center, center);
+            @include flex(center, normal);
+            @include media-breakpoint-down(sm) {
+                align-items: baseline;
+                flex-direction: column;
+            }
             span{
                 display: inline-flex;
+                padding: 0.5rem;
+                margin: 0 1rem;
+                font-size: 0.8em;
+                border-radius: 4px;
+                border: 1px solid $color_four;
+                @include media-breakpoint-down(sm) {
+                    margin: 0;
+                    margin-top: 0.5rem;
+                }
             }
         }
-        @include media-breakpoint-down(md) {
+        @include media-breakpoint-down(lg) {
             display: block;
             .form-group{
                 margin-top: 0.5rem;
