--- a/src/assets/scss/modules/_vaccine.scss
+++ b/src/assets/scss/modules/_vaccine.scss
@@ -5,10 +5,6 @@
         .app-title{
             margin: 0;
             @include flex(center, normal);
-            @include media-breakpoint-down(sm) {
-                align-items: baseline;
-                flex-direction: column;
-            }
             span{
                 display: inline-flex;
                 padding: 0.5rem;
@@ -17,8 +13,7 @@
                 border-radius: 4px;
                 border: 1px solid $color_four;
                 @include media-breakpoint-down(sm) {
-                    margin: 0;
-                    margin-top: 0.5rem;
+                    margin: 0.5rem;
                 }
             }
         }
